Fix invisible buttons

--- a/css/team.css
+++ b/css/team.css
@@ -88,3 +88,7 @@
   font-size: 50px;
   margin: 4%;
 }
+
+.member-socials i:hover {
+  color: white;
+}
